--- a/scss/editor/callouts/_callout-email.scss
+++ b/scss/editor/callouts/_callout-email.scss
@@ -1,4 +1,4 @@
-@forward '../../shared/workleaves';
+@forward "../../shared/workleaves";
 
 .callout[data-callout="email"] {
     --callout-icon: lucide-send-horizontal;
@@ -7,7 +7,9 @@
     --callout-email-color: var(--mono-rgb-100);
     --callout-color: var(--callout-email-color);
 
-    font-family: 'Courier New', Courier, monospace;
+    &:not([data-callout-metadata~="default-font"]) {
+        font-family: "Courier New", Courier, monospace;
+    }
 
     > .callout-title {
         gap: 10px;
@@ -39,9 +41,11 @@
         > .callout-title .callout-title-inner {
             text-wrap: nowrap;
         }
-        > .callout-title .callout-icon { display: none; }
+        > .callout-title .callout-icon {
+            display: none;
+        }
 
-        > .callout-content { 
+        > .callout-content {
             flex-grow: 1;
             border: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
             background-color: var(--workleaves-background);
@@ -55,9 +59,8 @@
         }
     }
 
-
     .callout[data-callout-metadata~="sep"] {
         padding-bottom: var(--size-4-6);
-        border-bottom: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));;
+        border-bottom: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
     }
 }
