--- a/scss/editor/callouts/_callout-profile.scss
+++ b/scss/editor/callouts/_callout-profile.scss
@@ -1,4 +1,4 @@
-@forward '../../shared/font-typewriter';
+@forward "../../shared/font-typewriter";
 
 .callout[data-callout="profile"] {
     --callout-color: var(--color-gray-rgb);
@@ -8,7 +8,7 @@
     --line-height-tight: 1;
     --icon-stroke: 3px;
 
-    & .callout-title {
+    &:not([data-callout-metadata~="default-font"]) .callout-title {
         font-family: var(--font-typewriter);
     }
 
@@ -16,7 +16,7 @@
         align-items: flex-start;
     }
 
-    & .callout-content>p:first-child .image-embed {
+    & .callout-content > p:first-child .image-embed {
         float: right;
         margin-left: var(--size-4-3);
     }
@@ -25,10 +25,12 @@
         display: flow-root;
     }
 
-    & .callout-content>p:first-child img {
+    & .callout-content > p:first-child img {
         max-width: 150px;
         position: relative;
         border: var(--callout-border-width) solid rgba(var(--callout-color), 0.5);
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.5);
+        box-shadow:
+            0px 0px 15px rgba(0, 0, 0, 0.5),
+            0px 0px 5px rgba(0, 0, 0, 0.5);
     }
 }
