--- a/scss/plugins/core/_file-explorer-rainbow.scss
+++ b/scss/plugins/core/_file-explorer-rainbow.scss
@@ -1,40 +1,20 @@
 body {
 	--fas-rainbow-folders: enable;
+	--rainbow-brightness: 1;
+	--rainbow-saturation: 10;
 }
 
 @container style(--fas-rainbow-folders: enable) {
 	.nav-folder-children > .nav-folder,
 	.nav-files-container > div > .nav-folder,
 	[data-type="bookmarks"] .tree-item {
-		&:nth-child(10n + 2) {
-			--folder-color: var(--color-rainbow-1);
-		}
-		&:nth-child(10n + 3) {
-			--folder-color: var(--color-rainbow-2);
-		}
-		&:nth-child(10n + 4) {
-			--folder-color: var(--color-rainbow-3);
-		}
-		&:nth-child(10n + 5) {
-			--folder-color: var(--color-rainbow-4);
-		}
-		&:nth-child(10n + 6) {
-			--folder-color: var(--color-rainbow-5);
-		}
-		&:nth-child(10n + 7) {
-			--folder-color: var(--color-rainbow-6);
-		}
-		&:nth-child(10n + 8) {
-			--folder-color: var(--color-rainbow-7);
-		}
-		&:nth-child(10n + 9) {
-			--folder-color: var(--color-rainbow-8);
-		}
-		&:nth-child(10n + 10) {
-			--folder-color: var(--color-rainbow-9);
-		}
 		&:nth-child(10n + 1) {
 			--folder-color: var(--color-rainbow-10);
+		}
+		@for $i from 2 through 10 {
+			&:nth-child(10n + #{$i}) {
+				--folder-color: var(--color-rainbow-#{$i - 1});
+			}
 		}
 	}
 
@@ -44,8 +24,9 @@ body {
 	}
 
 	.nav-files-container > div > .nav-folder .nav-folder-title,
-	[data-type="bookmarks"] .tree-item {
+	[data-type="bookmarks"] .tree-item .mod-collapsible {
 		--nav-item-color: var(--folder-color);
 		--nav-item-background-hover: color-mix(in srgb, var(--folder-color), transparent 80%);
+		filter: saturate(var(--rainbow-saturation)) brightness(var(--rainbow-brightness));
 	}
 }
