--- a/snippets/plugins/core/file-explorer-rainbow.css
+++ b/snippets/plugins/core/file-explorer-rainbow.css
@@ -50,9 +50,16 @@ Author: ElsaTam (Kapirklaa in Discord)
 
 body {
   --fas-rainbow-folders: enable;
+  --rainbow-brightness: 1;
+  --rainbow-saturation: 10;
 }
 
 @container style(--fas-rainbow-folders: enable) {
+  .nav-folder-children > .nav-folder:nth-child(10n+1),
+  .nav-files-container > div > .nav-folder:nth-child(10n+1),
+  [data-type=bookmarks] .tree-item:nth-child(10n+1) {
+    --folder-color: var(--color-rainbow-10);
+  }
   .nav-folder-children > .nav-folder:nth-child(10n+2),
   .nav-files-container > div > .nav-folder:nth-child(10n+2),
   [data-type=bookmarks] .tree-item:nth-child(10n+2) {
@@ -98,18 +105,14 @@ body {
   [data-type=bookmarks] .tree-item:nth-child(10n+10) {
     --folder-color: var(--color-rainbow-9);
   }
-  .nav-folder-children > .nav-folder:nth-child(10n+1),
-  .nav-files-container > div > .nav-folder:nth-child(10n+1),
-  [data-type=bookmarks] .tree-item:nth-child(10n+1) {
-    --folder-color: var(--color-rainbow-10);
-  }
   .nav-files-container .nav-folder.nav-folder .nav-folder,
   [data-type=bookmarks] .tree-item .tree-item {
     --folder-color: inherit;
   }
   .nav-files-container > div > .nav-folder .nav-folder-title,
-  [data-type=bookmarks] .tree-item {
+  [data-type=bookmarks] .tree-item .mod-collapsible {
     --nav-item-color: var(--folder-color);
     --nav-item-background-hover: color-mix(in srgb, var(--folder-color), transparent 80%);
+    filter: saturate(var(--rainbow-saturation)) brightness(var(--rainbow-brightness));
   }
 }
