--- a/scss/foundations/_foundations.scss
+++ b/scss/foundations/_foundations.scss
@@ -1,11 +1,12 @@
-@use 'colors/default_theme';
-@use 'colors/dynamic_palette';
-@use 'colors/rainbow-colors-base';
-@use 'colors/rainbow-colors-variants';
-@use 'text/font-family';
-@use 'text/font-weight';
-@use 'text/text-wrap';
-@use 'fas-accessibility';
+@use "colors/default_theme";
+@use "colors/dynamic_palette";
+@use "colors/rainbow-colors-base";
+@use "colors/rainbow-colors-variants";
+@use "text/font-family";
+@use "text/font-weight";
+@use "text/highlight";
+@use "text/text-wrap";
+@use "fas-accessibility";
 
-@use 'app-css-variables';
-@use 'shared-css-variables';
+@use "app-css-variables";
+@use "shared-css-variables";
